@@ -4,12 +4,13 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
 
-import com.avatarduel.builder.CharacterBuilder;
-import com.avatarduel.builder.LandBuilder;
-import com.avatarduel.builder.SkillBuilder;
 import com.avatarduel.model.Card;
-import com.avatarduel.model.Effect;
-import com.avatarduel.model.Element;
+import com.avatarduel.model.Land;
+import com.avatarduel.model.Character;
+import com.avatarduel.model.Skill;
+import com.avatarduel.model.attribute.Attribute;
+import com.avatarduel.model.type.Effect;
+import com.avatarduel.model.type.Element;
 import javafx.event.EventHandler;
 import javafx.fxml.FXML;
 import javafx.scene.input.MouseEvent;
@@ -58,11 +59,11 @@ public class MidFieldController {
         VBox bottom = (VBox) parent.getChildren().get(2);
         if(cardType.getText().equals("Land")){
             Text cardDescription = (Text) bottom.getChildren().get(0);
-            selectedCard = new LandBuilder()
-                    .name(cardName.getText())
-                    .description(cardDescription.getText())
-                    .element(Element.valueOf(cardElement.getText()))
-                    .build();
+            selectedCard = new Land(
+                    cardName.getText(),
+                    Element.valueOf(cardElement.getText()),
+                    cardDescription.getText()
+            );
         }
         else if(cardType.getText().equals("Character")){
             Text cardDescription = (Text) bottom.getChildren().get(0);
@@ -70,14 +71,16 @@ public class MidFieldController {
             Text cardAttack = (Text) attribute.getChildren().get(0);
             Text cardDefense = (Text) attribute.getChildren().get(2);
             Text cardPower = (Text) attribute.getChildren().get(4);
-            selectedCard = new CharacterBuilder()
-                    .name(cardName.getText())
-                    .description(cardDescription.getText())
-                    .element(Element.valueOf(cardElement.getText()))
-                    .attack(Integer.valueOf(cardAttack.getText().replaceAll("\\D+", "")))
-                    .defense(Integer.valueOf(cardDefense.getText().replaceAll("\\D+", "")))
-                    .power(Integer.valueOf(cardPower.getText().replaceAll("\\D+", "")))
-                    .build();
+            selectedCard = new Character(
+                    cardName.getText(),
+                    Element.valueOf(cardElement.getText()),
+                    cardDescription.getText(),
+                    new Attribute(
+                            Integer.valueOf(cardAttack.getText().replaceAll("\\D+", "")),
+                            Integer.valueOf(cardDefense.getText().replaceAll("\\D+", "")),
+                            Integer.valueOf(cardPower.getText().replaceAll("\\D+", ""))
+                    )
+            );
         }
         else{
             Text cardDescription = (Text) bottom.getChildren().get(0);
@@ -86,15 +89,17 @@ public class MidFieldController {
             Text cardAttack = (Text) attribute.getChildren().get(0);
             Text cardDefense = (Text) attribute.getChildren().get(2);
             Text cardPower = (Text) attribute.getChildren().get(4);
-            selectedCard = new SkillBuilder()
-                    .name(cardName.getText())
-                    .description(cardDescription.getText())
-                    .element(Element.valueOf(cardElement.getText()))
-                    .attack(Integer.valueOf(cardAttack.getText().replaceAll("\\D+", "")))
-                    .defense(Integer.valueOf(cardDefense.getText().replaceAll("\\D+", "")))
-                    .power(Integer.valueOf(cardPower.getText().replaceAll("\\D+", "")))
-                    .effect(Effect.valueOf(cardEffect.getText()))
-                    .build();
+            selectedCard = new Skill(
+                    cardName.getText(),
+                    Element.valueOf(cardElement.getText()),
+                    cardDescription.getText(),
+                    Effect.valueOf(cardEffect.getText()),
+                    new Attribute(
+                            Integer.valueOf(cardAttack.getText().replaceAll("\\D+", "")),
+                            Integer.valueOf(cardDefense.getText().replaceAll("\\D+", "")),
+                            Integer.valueOf(cardPower.getText().replaceAll("\\D+", ""))
+                    )
+            );
         }
         return selectedCard;
     }
