@@ -1,8 +1,8 @@
 package com.avatarduel.reader;
 
-import com.avatarduel.builder.CharacterBuilder;
 import com.avatarduel.model.Character;
-import com.avatarduel.model.Element;
+import com.avatarduel.model.attribute.Attribute;
+import com.avatarduel.model.type.Element;
 import com.avatarduel.util.CSVReader;
 
 import java.io.File;
@@ -31,14 +31,16 @@ public class CharacterReader extends CardReader {
         List<String[]> characterRows = characterReader.read();
         for (String[] row : characterRows) {
             characterList.add(
-                    new CharacterBuilder()
-                            .name(row[1])
-                            .element(Element.valueOf(row[2]))
-                            .description(row[3])
-                            .attack(Integer.valueOf(row[5]))
-                            .defense(Integer.valueOf(row[6]))
-                            .power(Integer.valueOf(row[7]))
-                            .build()
+                    new Character(
+                            row[1],
+                            Element.valueOf(row[2]),
+                            row[3],
+                            new Attribute(
+                                    Integer.valueOf(row[5]),
+                                    Integer.valueOf(row[6]),
+                                    Integer.valueOf(row[7])
+                            )
+                    )
             );
         }
     }
